# Document-AI

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/docai/api/: app.py
src/docai/core/: exporter.py  extractor.py  preprocess.py  validator.py
src/docai/db/: repository.py
src/docai/models/: schemas.py
src/docai/static/: index.html
tests/: test_exporter.py  test_validator.py
