[project]
name = "docai"
version = "0.1.0"
description = "Document AI for Kazakhstan SMBs — invoice photo to structured Excel"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "google-genai>=1.0",
    "openpyxl>=3.1",
    "Pillow>=10.0",
    "pypdfium2>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
docai = ["static/*.html"]

[tool.ruff]
line-length = 100
